// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render header input with error 1`] = `
<header
  className="tc-enumeration-header has-error"
>
  <input
    autoFocus={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="New entry"
    type="text"
    value={undefined}
  />
  <div
    className="tc-enumeration-header-error"
  >
    duplicate value
  </div>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-check"
      />
    </svg>
  </button>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</header>
`;

exports[`Header should render header input with two buttons 1`] = `
<header
  className="tc-enumeration-header"
>
  <input
    autoFocus={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="New entry"
    type="text"
    value={undefined}
  />
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-check"
      />
    </svg>
  </button>
  <button
    className="btn btn-link"
    disabled={false}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    onMouseOver={[Function]}
    role="link"
    type="button"
  >
    <svg
      aria-hidden="true"
      className="tc-svg-icon tc-svg-icon"
      focusable="false"
      title={null}
    >
      <use
        xlinkHref="#talend-cross"
      />
    </svg>
  </button>
</header>
`;
